--- a/index.html
+++ b/index.html
@@ -1,241 +1,12 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html lang="zh">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>贷款计算器</title>
-    <link rel="stylesheet" href="style.css">
+    <title>贷款计算器 - Vue 3 + Element Plus</title>
 </head>
 <body>
-    <div class="container">
-        <h1>贷款计算器</h1>
-
-        <!-- 上半部分：表单 -->
-        <div class="form-section">
-            <form id="loanForm">
-                <div class="form-row">
-                    <div class="form-group">
-                        <label for="loanAmount">贷款金额(元):</label>
-                        <input type="number" id="loanAmount" name="loanAmount" step="0.01" min="0" required>
-                    </div>
-
-                    <div class="form-group">
-                        <label for="interestRate">利率:</label>
-                        <input type="number" id="interestRate" name="interestRate" step="0.01" min="0" required>
-                    </div>
-
-                    <div class="form-group">
-                        <label for="rateType">利率类型:</label>
-                        <select id="rateType" name="rateType" required>
-                            <option value="annual">年利率</option>
-                            <option value="monthly">月利率</option>
-                        </select>
-                    </div>
-                </div>
-
-                <div class="form-row">
-                    <div class="form-group">
-                        <label for="loanTerm">贷款期限(月):</label>
-                        <input type="number" id="loanTerm" name="loanTerm" min="1" step="1" required>
-                    </div>
-
-                    <div class="form-group">
-                        <label for="paymentMethod">还款方式:</label>
-                        <select id="paymentMethod" name="paymentMethod" required>
-                            <option value="equal-payment">等额本息</option>
-                            <option value="equal-principal">等额本金</option>
-                            <option value="interest-only">先息后本</option>
-                        </select>
-                    </div>
-
-                    <div class="form-group">
-                        <label for="startDate">还款起始日期:</label>
-                        <input type="date" id="startDate" name="startDate" required>
-                    </div>
-                </div>
-
-                <div class="button-group">
-                    <button type="button" id="calculateBtn" class="btn btn-primary">🧮 计算</button>
-                    <button type="button" id="resetBtn" class="btn btn-secondary">🔄 重置</button>
-                    <button type="button" id="exportBtn" class="btn btn-success">📊 导出CSV</button>
-                </div>
-            </form>
-        </div>
-
-        <!-- 下半部分：还款计划表 -->
-        <div class="result-section">
-            <h2>还款计划表</h2>
-
-            <!-- 上半部分：8个区域的栅格布局 -->
-            <div class="grid-summary">
-                <div class="grid-item">
-                    <div class="grid-label">贷款金额</div>
-                    <div class="grid-value grid-value-1" id="gridLoanAmount">-</div>
-                </div>
-                <div class="grid-item">
-                    <div class="grid-label">年利率</div>
-                    <div class="grid-value grid-value-2" id="gridInterestRate">-</div>
-                </div>
-                <div class="grid-item">
-                    <div class="grid-label">贷款期限</div>
-                    <div class="grid-value grid-value-3" id="gridLoanTerm">-</div>
-                </div>
-                <div class="grid-item">
-                    <div class="grid-label">还款方式</div>
-                    <div class="grid-value grid-value-4" id="gridPaymentMethod">-</div>
-                </div>
-                <div class="grid-item">
-                    <div class="grid-label">总利息</div>
-                    <div class="grid-value grid-value-5" id="gridTotalInterest">-</div>
-                </div>
-                <div class="grid-item">
-                    <div class="grid-label">总还款额</div>
-                    <div class="grid-value grid-value-6" id="gridTotalPayment">-</div>
-                </div>
-                <div class="grid-item">
-                    <div class="grid-label">首期还款</div>
-                    <div class="grid-value grid-value-7" id="gridFirstPayment">-</div>
-                </div>
-                <div class="grid-item">
-                    <div class="grid-label">末期还款</div>
-                    <div class="grid-value grid-value-8" id="gridLastPayment">-</div>
-                </div>
-            </div>
-
-            <!-- 下半部分：还款计划表格 -->
-            <div class="table-container">
-                <table id="resultTable" class="result-table">
-                    <thead>
-                        <tr>
-                            <th>期数</th>
-                            <th>还款日期</th>
-                            <th>应还本金 (元)</th>
-                            <th>应还利息 (元)</th>
-                            <th>当期总还款额 (元)</th>
-                            <th>剩余本金 (元)</th>
-                            <th>操作</th>
-                        </tr>
-                    </thead>
-                    <tbody id="resultTableBody">
-                    </tbody>
-                    <tfoot id="resultTableFoot">
-                        <tr class="total-row">
-                            <td colspan="2">总计</td>
-                            <td id="totalPrincipal">-</td>
-                            <td id="totalInterest">-</td>
-                            <td id="totalPayment">-</td>
-                            <td>-</td>
-                            <td>-</td>
-                        </tr>
-                    </tfoot>
-                </table>
-            </div>
-
-            <!-- 贷款已结清标志 -->
-            <div id="loanSettledStatus" class="loan-settled-status hidden">
-                <div class="settled-content">
-                    <div class="settled-icon">🎉</div>
-                    <div class="settled-text">
-                        <h3>🏁 贷款已全部结清</h3>
-                        <p>恭喜您已成功结清所有贷款！</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!-- 部分还款模态框 -->
-    <div id="partialPaymentModal" class="modal">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h3>部分还款</h3>
-                <span class="modal-close">&times;</span>
-            </div>
-            <div class="modal-body">
-                <div class="modal-info">
-                    <p>第 <span id="modalPeriod">-</span> 期</p>
-                    <p>原定还款日期: <span id="modalOriginalDate">-</span></p>
-                    <p>期初剩余本金: <span id="modalRemainingPrincipal">-</span> 元</p>
-                </div>
-
-                <div class="form-group">
-                    <label for="partialAmount">提前还款金额 (元):</label>
-                    <input type="number" id="partialAmount" step="0.01" min="0" placeholder="请输入提前还款金额">
-                </div>
-
-                <div class="form-group">
-                    <label for="partialPaymentDate">提前还款时间:</label>
-                    <input type="date" id="partialPaymentDate" required>
-                </div>
-
-                <div class="form-group">
-                    <label>后续还款计划调整方式:</label>
-                    <div class="radio-group">
-                        <div class="radio-option">
-                            <input type="radio" id="adjustmentShorten" name="adjustmentType" value="shorten_term" checked style="width: 10%">
-                            <label for="adjustmentShorten" class="radio-label-inline">月供不变，缩短还款期限</label>
-                        </div>
-                        <div class="radio-option">
-                            <input type="radio" id="adjustmentReduce" name="adjustmentType" value="reduce_payment" style="width: 10%">
-                            <label for="adjustmentReduce" class="radio-label-inline">期限不变，减少月供金额</label>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="modal-footer">
-                <button id="confirmPartialPayment" class="btn btn-primary">确认</button>
-                <button id="cancelPartialPayment" class="btn btn-secondary">取消</button>
-            </div>
-        </div>
-    </div>
-
-    <!-- 全部还款确认模态框 -->
-    <div id="fullPaymentModal" class="modal">
-        <div class="modal-content modal-content-small">
-            <div class="modal-header">
-                <h3>🏁 贷款结清确认</h3>
-                <span class="modal-close" id="fullPaymentModalClose">&times;</span>
-            </div>
-            <div class="modal-body">
-                <div class="settlement-info">
-                    <div class="settlement-icon">
-                        <div class="icon-circle">💰</div>
-                    </div>
-                    <div class="settlement-text">
-                        <p class="settlement-title">您将一次性结清所有贷款</p>
-                        <p class="settlement-details">
-                            第 <span id="fullPaymentPeriod">-</span> 期全部还款
-                        </p>
-                    </div>
-                </div>
-
-                <div class="amount-breakdown">
-                    <div class="amount-item">
-                        <span class="amount-label">剩余本金:</span>
-                        <span class="amount-value" id="fullPaymentPrincipal">-</span>
-                    </div>
-                    <div class="amount-item">
-                        <span class="amount-label">本期利息:</span>
-                        <span class="amount-value" id="fullPaymentInterest">-</span>
-                    </div>
-                    <div class="amount-divider"></div>
-                    <div class="amount-item total-amount">
-                        <span class="amount-label">应付总额:</span>
-                        <span class="amount-value total-value" id="fullPaymentTotal">-</span>
-                    </div>
-                </div>
-
-                <div class="confirmation-text">
-                    <p>⚠️ 此操作将结清全部贷款，无法撤销</p>
-                </div>
-            </div>
-            <div class="modal-footer">
-                <button id="confirmFullPayment" class="btn btn-danger">🏁 确认结清</button>
-                <button id="cancelFullPayment" class="btn btn-secondary">取消</button>
-            </div>
-        </div>
-    </div>
-
-    <script src="script.js"></script>
+<div id="app"></div>
+<script type="module" src="/src/main.js"></script>
 </body>
 </html>
