--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>贷款计算器 - Vue 3 + Element Plus</title>
+    <title>贷款计算器</title>
 </head>
 <body>
 <div id="app"></div>
